# firewall_offload

./: .gitlab-ci.yml  FLOWS.md  README.md  install_grpc_1.30.sh  meson.build
.devcontainer/: devcontainer.json
debian/: changelog  control  copyright  rules
include/: nv_opof.h  nv_opof_rpc.h  nv_opof_util.h
scripts/: Dockerfile.grpc  Dockerfile.opof  bf3_grpc_130_third_party_abseil_cpp.patch  entrypoint.sh  nv_opof.yaml  opof.service  opof_pre_check  opof_setup_highavail  upgrade_from_gitlab.sh  upgrade_from_local_repo.sh
src/: meson.build  nv_opof.c  nv_opof_flow.c  nv_opof_globals.c  nv_opof_init.c  nv_opof_log.c  nv_opof_rpc.c  nv_opof_server.c  nv_opof_thread.c  nv_opof_util.c  opof
subprojects/: session_offload.wrap
subprojects/packagefiles/session_offload_patches/: meson.build
subprojects/packagefiles/session_offload_patches/openoffload/cpp/framework/src/: opof_server.cc  opof_session_server.cc
test/: README_Tests.md  meson.build
test/opof_tester/: install_prereqs.sh  opof_test_driver.py  opof_test_traffic_gen.py  opof_tester.proto  remote_setup.sh  run_test.sh  test_conf.sh
test/unittest/: meson.build  test_nv_opof.cpp
test/unittest/mocks/: rte_flow_mock.cpp  rte_flow_mock.h
